[metadata]
name = hjz.code-graph
version = 0.0.1
author = HJZ
author_email = hjz@hackjumpzero.ca
description = A visualization tool for graphing relationships of a C/Cpp code base
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hantianjz/Code-Graph
project_urls =
    Bug Tracker = https://github.com/hantianjz/Code-Graph/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix / Linux

[options]
packages = find_namespace:
python_requires = >=3.6

entry_points = 
    [console_scripts]
    graph = hjz.code_graph.code_graph:main
    tag = hjz.code_graph.code_tag:main
